# local-knowledge-base

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  OPENCODE_SETUP.md  Ollama安装指南.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  开发进度.md  技术文档.md  技术方案.md
${paths.vector_store}/chroma/: chroma.sqlite3
.sisyphus/documents/: current-state-summary.md
.sisyphus/plans/: document-management-optimization.md  fix_chunk_pagination.md
config/: models.yaml  settings.yaml
docs/: IMPROVEMENT_PLAN.md  document-cleanup-suggestions.md  document_processing_strategy.md  mineru-retention-note.md  scripts-analysis.md  technical-evaluation.md  优化说明.md  方舟codingplan环境配置.md  检索系统清理与优化计划.md  综合优化方案：优缺点分析与完整建议.md
docs/analysis/: 2025-03-03-security-and-code-review.md
docs/plans/: 2025-03-03-security-and-code-fixes.md  2026-03-25-code-cleanup-design.md  2026-03-25-code-cleanup-implementation.md  configuration-guide.md
scripts/: deepseek_api.py  download_models.ps1  run_llamafactory_api.bat  setup_china_env.ps1  start.bat  start.sh  start_all.bat  test_document_management_workflow.py  test_rag.py  verify_document_vector_consistency.py
src/: __init__.py  main.py
src/agents/: AGENTS.md  __init__.py  base_agent.py  classifier.py  graph_agent.py  rag_agent.py  tools.py
src/api/: AGENTS.md  __init__.py  main.py
src/core/: AGENTS.md  __init__.py  config.py  document_processor.py  llm_manager.py  mineru_api.py  rag_chain.py  session_manager.py  vector_store.py  vector_store_backup.py
src/frontend/: AGENTS.md  __init__.py  app.py  gradio_app.py
src/utils/: __init__.py  mineru_importer.py
tests/: AGENTS.md  test_retrieval.py
tests/agents/: test_classifier.py  test_graph_agent.py  test_skills.py  test_tools.py
tests/api/: test_document_endpoints.py
(+8 files in other folders)
